resources/kube-prometheus/generated/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 10.2.2
  name: grafana
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: kube-prometheus
  template:
    metadata:
      annotations:
        checksum/grafana-config: 35bb797d56e8dabffe0b30a2e466dfae
        checksum/grafana-dashboardproviders: f59a38060098b26f1f354cda75d0d765
        checksum/grafana-datasources: 38d85e6e3ae01098912b4d7b86fe50ce
      labels:
        app.kubernetes.io/component: grafana
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 10.2.2
    spec:
      automountServiceAccountToken: false
      containers:
      - env: []
        image: grafana/grafana:10.2.2
        name: grafana
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
          readOnly: false
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
          readOnly: false
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
          readOnly: false
        - mountPath: /tmp
          name: tmp-plugins
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/alertmanager-overview
          name: grafana-dashboard-alertmanager-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/apiserver
          name: grafana-dashboard-apiserver
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cluster-total
          name: grafana-dashboard-cluster-total
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/controller-manager
          name: grafana-dashboard-controller-manager
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/grafana-overview
          name: grafana-dashboard-grafana-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-cluster
          name: grafana-dashboard-k8s-resources-cluster
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-multicluster
          name: grafana-dashboard-k8s-resources-multicluster
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-namespace
          name: grafana-dashboard-k8s-resources-namespace
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-node
          name: grafana-dashboard-k8s-resources-node
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-pod
          name: grafana-dashboard-k8s-resources-pod
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workload
          name: grafana-dashboard-k8s-resources-workload
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workloads-namespace
          name: grafana-dashboard-k8s-resources-workloads-namespace
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/kubelet
          name: grafana-dashboard-kubelet
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/namespace-by-pod
          name: grafana-dashboard-namespace-by-pod
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/namespace-by-workload
          name: grafana-dashboard-namespace-by-workload
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/node-cluster-rsrc-use
          name: grafana-dashboard-node-cluster-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/node-rsrc-use
          name: grafana-dashboard-node-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes-darwin
          name: grafana-dashboard-nodes-darwin
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes
          name: grafana-dashboard-nodes
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/persistentvolumesusage
          name: grafana-dashboard-persistentvolumesusage
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/pod-total
          name: grafana-dashboard-pod-total
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/prometheus-remote-write
          name: grafana-dashboard-prometheus-remote-write
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/prometheus
          name: grafana-dashboard-prometheus
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/proxy
          name: grafana-dashboard-proxy
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/scheduler
          name: grafana-dashboard-scheduler
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/workload-total
          name: grafana-dashboard-workload-total
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Ingress/ingress-nginx
          name: grafana-dashboard-ingress-nginx
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/K8S/k8s-hpa
          name: grafana-dashboard-k8s-hpa
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/K8S/k8s-views-namespaces
          name: grafana-dashboard-k8s-views-namespaces
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/K8S/k8s-views-pods
          name: grafana-dashboard-k8s-views-pods
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Loki/loki-chunks
          name: grafana-dashboard-loki-chunks
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Loki/loki-deletions
          name: grafana-dashboard-loki-deletions
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Loki/loki-logs
          name: grafana-dashboard-loki-logs
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Loki/loki-mixin-recording-rules
          name: grafana-dashboard-loki-mixin-recording-rules
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Loki/loki-operational
          name: grafana-dashboard-loki-operational
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Loki/loki-reads-resources
          name: grafana-dashboard-loki-reads-resources
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Loki/loki-reads
          name: grafana-dashboard-loki-reads
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Loki/loki-retention
          name: grafana-dashboard-loki-retention
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Loki/loki-writes-resources
          name: grafana-dashboard-loki-writes-resources
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/Loki/loki-writes
          name: grafana-dashboard-loki-writes
          readOnly: false
        - mountPath: /etc/grafana
          name: grafana-config
          readOnly: false
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: grafana
      volumes:
      - emptyDir: {}
        name: grafana-storage
      - name: grafana-datasources
        secret:
          secretName: grafana-datasources
      - configMap:
          name: grafana-dashboards
        name: grafana-dashboards
      - emptyDir:
          medium: Memory
        name: tmp-plugins
      - configMap:
          name: grafana-dashboard-alertmanager-overview
        name: grafana-dashboard-alertmanager-overview
      - configMap:
          name: grafana-dashboard-apiserver
        name: grafana-dashboard-apiserver
      - configMap:
          name: grafana-dashboard-cluster-total
        name: grafana-dashboard-cluster-total
      - configMap:
          name: grafana-dashboard-controller-manager
        name: grafana-dashboard-controller-manager
      - configMap:
          name: grafana-dashboard-grafana-overview
        name: grafana-dashboard-grafana-overview
      - configMap:
          name: grafana-dashboard-k8s-resources-cluster
        name: grafana-dashboard-k8s-resources-cluster
      - configMap:
          name: grafana-dashboard-k8s-resources-multicluster
        name: grafana-dashboard-k8s-resources-multicluster
      - configMap:
          name: grafana-dashboard-k8s-resources-namespace
        name: grafana-dashboard-k8s-resources-namespace
      - configMap:
          name: grafana-dashboard-k8s-resources-node
        name: grafana-dashboard-k8s-resources-node
      - configMap:
          name: grafana-dashboard-k8s-resources-pod
        name: grafana-dashboard-k8s-resources-pod
      - configMap:
          name: grafana-dashboard-k8s-resources-workload
        name: grafana-dashboard-k8s-resources-workload
      - configMap:
          name: grafana-dashboard-k8s-resources-workloads-namespace
        name: grafana-dashboard-k8s-resources-workloads-namespace
      - configMap:
          name: grafana-dashboard-kubelet
        name: grafana-dashboard-kubelet
      - configMap:
          name: grafana-dashboard-namespace-by-pod
        name: grafana-dashboard-namespace-by-pod
      - configMap:
          name: grafana-dashboard-namespace-by-workload
        name: grafana-dashboard-namespace-by-workload
      - configMap:
          name: grafana-dashboard-node-cluster-rsrc-use
        name: grafana-dashboard-node-cluster-rsrc-use
      - configMap:
          name: grafana-dashboard-node-rsrc-use
        name: grafana-dashboard-node-rsrc-use
      - configMap:
          name: grafana-dashboard-nodes-darwin
        name: grafana-dashboard-nodes-darwin
      - configMap:
          name: grafana-dashboard-nodes
        name: grafana-dashboard-nodes
      - configMap:
          name: grafana-dashboard-persistentvolumesusage
        name: grafana-dashboard-persistentvolumesusage
      - configMap:
          name: grafana-dashboard-pod-total
        name: grafana-dashboard-pod-total
      - configMap:
          name: grafana-dashboard-prometheus-remote-write
        name: grafana-dashboard-prometheus-remote-write
      - configMap:
          name: grafana-dashboard-prometheus
        name: grafana-dashboard-prometheus
      - configMap:
          name: grafana-dashboard-proxy
        name: grafana-dashboard-proxy
      - configMap:
          name: grafana-dashboard-scheduler
        name: grafana-dashboard-scheduler
      - configMap:
          name: grafana-dashboard-workload-total
        name: grafana-dashboard-workload-total
      - configMap:
          name: grafana-dashboard-ingress-nginx
        name: grafana-dashboard-ingress-nginx
      - configMap:
          name: grafana-dashboard-k8s-hpa
        name: grafana-dashboard-k8s-hpa
      - configMap:
          name: grafana-dashboard-k8s-views-namespaces
        name: grafana-dashboard-k8s-views-namespaces
      - configMap:
          name: grafana-dashboard-k8s-views-pods
        name: grafana-dashboard-k8s-views-pods
      - configMap:
          name: grafana-dashboard-loki-chunks
        name: grafana-dashboard-loki-chunks
      - configMap:
          name: grafana-dashboard-loki-deletions
        name: grafana-dashboard-loki-deletions
      - configMap:
          name: grafana-dashboard-loki-logs
        name: grafana-dashboard-loki-logs
      - configMap:
          name: grafana-dashboard-loki-mixin-recording-rules
        name: grafana-dashboard-loki-mixin-recording-rules
      - configMap:
          name: grafana-dashboard-loki-operational
        name: grafana-dashboard-loki-operational
      - configMap:
          name: grafana-dashboard-loki-reads-resources
        name: grafana-dashboard-loki-reads-resources
      - configMap:
          name: grafana-dashboard-loki-reads
        name: grafana-dashboard-loki-reads
      - configMap:
          name: grafana-dashboard-loki-retention
        name: grafana-dashboard-loki-retention
      - configMap:
          name: grafana-dashboard-loki-writes-resources
        name: grafana-dashboard-loki-writes-resources
      - configMap:
          name: grafana-dashboard-loki-writes
        name: grafana-dashboard-loki-writes
      - name: grafana-config
        secret:
          secretName: grafana-config
